# controlador-ponto

./: .gitignore  MANIFEST.in  requirements.txt  setup.cfg  setup.py
controle/: README.md  __init__.py  __main__.py
controle/cli/: __init__.py  app.py  app_v1.py  app_v2.py  config.py  run_gui.py  run_tests.py  server_docs.py
controle/core/: README.md  controller.py  model.py
controle/core/exceptions/: __init__.py
controle/gui/: app.py
tests/: conftest.py
tests/unit/: test_parser.py
