[metadata]
name = controle
version = 0.1.0
description = Um projeto de controle de horas para uso pessoal.
author = Erik Marques
author_email = lucro.alternativo@outlook.com
url = https://github.com/seu-usuario/controle
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    controle
    exemplo
    python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    dateparser
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    mkdocs
    mkdocstrings[python]
    mkdocs-material
test = 
    pytest
    pytest-cov
    coverage

[options.package_data]
controle =
    docs/site/*      
    tests/*          

[options.entry_points]
console_scripts =
    serve-docs = controle.cli.serve_docs:main  
    run-tests = controle.cli.run_tests:main  
    run-gui = controle.cli.run_gui:main